src/eval/snapshots/monkey_language_server__eval__test__bool_eq.snap
---
source: src/eval/test.rs
description: let x = true == true;
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Bool, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Spanned("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,21)",
    parent_range: None,
    children: [],
}

========================

[]
