src/eval/snapshots/monkey_language_server__eval__test__bool_gt.snap
---
source: src/eval/test.rs
description: let x = true > true;
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Unknown, (0,4)->(0,5)),
        ),
    ],
    parent_id: None,
    children: [],
    id: 0,
}

========================

[
    Error(UnknownOperator("bool", "bool", ">"), (0,13)->(0,14)),
]
