src/eval/snapshots/monkey_language_server__eval__test__bool_lt.snap
---
source: src/eval/test.rs
description: let x = true < true;
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        Value("x", Unknown, (0,4)->(0,5), (0,0)->(0,20)),
    ],
    refs: [
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,20)",
    parent_range: None,
    children: [],
}

========================

[
    "TypeError: <bool> < <bool> (0,8)->(0,19)",
]
