src/eval/snapshots/monkey_language_server__eval__test__builtin_first_eval_happy.snap
---
source: src/eval/test.rs
description: "let x = first([1,2]);"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Value(Unknown, (0,4)->(0,5), (0,0)->(0,21)),
        ),
    ],
    refs: [
        Pos("first", "(0,8)->(0,13)"),
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,21)",
    parent_range: None,
    children: [],
}

========================

[]
