src/eval/snapshots/monkey_language_server__eval__test__builtin_last_bad_arg_count_2.snap
---
source: src/eval/test.rs
description: "let x = last([1], [1]);"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Unknown, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Spanned("last", "(0,8)->(0,12)"),
        Spanned("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,23)",
    parent_range: None,
    children: [],
}

========================

[
    Error(MismatchArgs(1, 2), (0,12)->(0,13)),
]
