src/eval/snapshots/monkey_language_server__eval__test__builtin_len.snap
---
source: src/eval/test.rs
description: "let x = len([1,2]);"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        Value("x", Int, (0,4)->(0,5), (0,0)->(0,19)),
    ],
    refs: [
        Pos("len", "(0,8)->(0,11)"),
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,19)",
    parent_range: None,
    children: [],
}

========================

[]
