src/eval/snapshots/monkey_language_server__eval__test__builtin_len_bad_arg_count_0.snap
---
source: src/eval/test.rs
description: let x = len();
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Value(Int, (0,4)->(0,5), (0,0)->(0,14)),
        ),
    ],
    refs: [
        Pos("len", "(0,8)->(0,11)"),
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,14)",
    parent_range: None,
    children: [],
}

========================

[
    "TypeError: mismatched arg and param count. Expected 1, got 0. (0,11)->(0,12)",
]
