src/eval/snapshots/monkey_language_server__eval__test__builtin_len_bad_arg_count_2.snap
---
source: src/eval/test.rs
description: "let x = len([1,2], [1]);"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Spanned(Int, (0,4)->(0,5)),
        ),
    ],
    refs: [
        Spanned("len", "(0,8)->(0,11)"),
        Spanned("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,24)",
    parent_range: None,
    children: [],
}

========================

[
    "TypeError: mismatched arg and param count. Expected 1, got 2. (0,11)->(0,12)",
]
