src/eval/snapshots/monkey_language_server__eval__test__builtin_push_happy.snap
---
source: src/eval/test.rs
description: "let x = push([1,2,3], 4);"
expression: "format!(\"{:#?}\\n\\n========================\\n\\n{:#?}\", env, diags)"
---
Environment {
    store: [
        (
            "x",
            Value(Array, (0,4)->(0,5), (0,0)->(0,25)),
        ),
    ],
    refs: [
        Pos("push", "(0,8)->(0,12)"),
        Pos("x", "(0,4)->(0,5)"),
    ],
    scope_range: "(0,0)->(0,25)",
    parent_range: None,
    children: [],
}

========================

[]
